# orthoinspector

./: README.md  api.py  app.py  config.yml  cook.py  geneontology.py  library.py  orthodb.py  orthodb2.py  requirements.txt  secret.py  select_clades.py  taxonomy.py  warehouse.py  webservice.py
orthoinspector/: pyproject.toml
orthoinspector/src/orthoinspector/: library.py
sql/: distance.sql  get_clade_species.sql  go_annotations.sql  go_autocomplete_fts.sql  go_autocomplete_term.sql  go_search.sql  ortholog2format.sql  orthologie2finale.sql  orthologs.sql  orthologs.sql.save  orthologs_model.sql  orthologswspecies.sql  protein.sql  protein_list.sql  proximal.sql  search_protein.sql  species_proteins.sql  speciesinfo.sql
src/: cladehandler.py  dbservice.py  geneontology.py  interpro.py  orthodb.py  orthodb1.py  orthodb2.py  pool.py  tasks.py  taxonomy.py  warehouse.py  webservice.py
static/css/: OI_theme.css  blastsearch.css  dbindex.css  index.css  orthoinspector_style.css  phylotree.css  profilesearch.css  profilesearchresult.css  protein.css
static/js/: autocomplete.js  blastsearch.js  data.js  dbindex.js  distribution.js  gosearch.js  gosearchresult.js  jquery.fancytree-all-mod.js  orthotable.js  phylotree.js  profilesearch.js  protein.js  (+3 more)
templates/: 404.html  about.html  apidesc.yml  apiui.html  base.html  blastsearch.html  dashboard.html  data.html  database.html  dbindex.html  dblist.html  dbspecific.html  dbstats.html  doc.html  gosearch.html  gosearchresult.html  index.html  macros.html  profilesearch.html  profilesearchresult.html  protein.html
(+1 files in other folders)
